<resources>
    <string name="app_name">Quiz</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="alreadyHaveAnAcc">Already have an account?</string>
    <string name="dontHaveAnAcc">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="play">Play!</string>
    <string name="myScores">My Scores</string>
    <string name="allScores">All Scores</string>
    <string name="film">Movies</string>
    <string name="historyAndArt">History And Art</string>
    <string name="historyBreakAndArt">History\nAnd Art</string>
    <string name="sport">Sport</string>
    <string name="science">Science</string>
    <string name="geography">Geography</string>
    <string name="usernameError">Invalid username</string>
    <string name="emailError">Invalid email</string>
    <string name="passwordError">Password must be at least 8 characters with at least 1 letter and 1 number</string>
    <string name="confirmPassError">Passwords do not match</string>
    <string name="confirmRegistration">An email has been sent to your email address. Please confirm the registration and log in. </string>
    <string name="already_taken">: has already been taken.</string>
    <string name="connection_not_established">Connection to the server could not be established.</string>
    <string name="email_not_confirmed">Email has not been confirmed</string>
    <string name="password_incorrect">Password or username incorrect.</string>
    <string name="login_not_available">Login not available at the moment.</string>
    <string name="registration_unavailable">Registration currently unavailable.</string>
    <string name="home">Home</string>
    <string name="bestPlayers">Best Players</string>
    <string name="scores_not_available">Scores are not available at the moment.</string>
    <string name="score_update_not_possible">It is not possible to update level at the moment.</string>
    <string name="level_updated_successfully">Level updated successfully.</string>
    <string name="submit">Submit</string>
</resources>
