<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/filmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#a00"
            android:text="@string/film"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="FilmBtnClick"/>

        <Button
            android:id="@+id/geographyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#aa0"
            android:text="@string/geography"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="GeographyBtnClick"/>

        <Button
            android:id="@+id/historyAndArtButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#0a0"
            android:text="@string/historyAndArt"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="HistoryAndArtBtnClick"/>

        <Button
            android:id="@+id/sportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#0aa"
            android:text="@string/sport"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="SportBtnClick"/>

        <Button
            android:id="@+id/scienceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#00a"
            android:text="@string/science"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="ScienceBtnClick"/>

    </LinearLayout>
</LinearLayout>