<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:background="@color/historyAndArtColor"
            android:onClick="PlayBtnClick"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:clickable="true"
            android:onClick="PlayBtnClick"
            android:paddingRight="80dp"
            android:text="@string/play"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="33sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/myScoresButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:background="@color/geographyColor"
            android:onClick="MyScoresBtnClick"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:clickable="true"
            android:onClick="MyScoresBtnClick"
            android:paddingRight="30dp"
            android:text="@string/myScores"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="33sp"
            android:textStyle="bold" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/allScoresButtonScoresButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:background="@color/scienceColor"
            android:onClick="AllScoresBtnClick"
            android:padding="10dp"
            android:paddingLeft="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/stat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:clickable="true"
            android:onClick="AllScoresBtnClick"
            android:paddingRight="30dp"
            android:text="@string/allScores"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="33sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>
